--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -4,8 +4,9 @@
     {% include 'navbar.html' %}
 {% endblock %}
 {% block main %}
-    <div class="container" >
-        <div class="row">
+ <div style="background-image: url('/static/images/pixels.png');background-repeat: repeat;background-attachment: fixed;background-color: #CCFFCC">
+        <div class="container" style="margin-top: -20px;margin-bottom: -650px">
+            <div class="row" style="margin-top: 20px;margin-bottom: 650px">
             <div class="col-md-8">
                 <div class="panel panel-default">
                     <div class="panel-heading" style="background-color: #C6E5E9">
@@ -39,4 +40,5 @@
             </div>
         </div>
     </div>
+ </div>
 {% endblock %}
