--- a/templates/nav.html
+++ b/templates/nav.html
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                     <li class="">
-                        <a style="" href="{% url 'user_profile' user.id %}">{{ user.username }} <span class="badge"></span></a>
+                        <a style="color: #245269" href="{% url 'user_profile' user.id %}">{{ user.username }} <span class="badge"></span></a>
                     </li>
                     <li class="">
                         <a href="{% url 'logout' %}"><img src="/static/images/logout.png"></a>
