--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-default navbar-fixed-top" role="banner" style="background-color: #ffffff">
+<header class="navbar navbar-default navbar-fixed-top" role="banner" style="background-color: #ffffff;">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
@@ -10,7 +10,7 @@
             </button>
             <a href="{% url 'index' %}" class="navbar-brand">DlpuCsdn</a>
         </div>
-        <nav class="collapse navbar-collapse bs-navbar-collapse" id="top" role="navigation">
+        <nav class="collapse navbar-collapse bs-navbar-collapse nav-color" id="top" role="navigation" style="font: bold">
             <ul class="nav navbar-nav">
                 <li class=""><a href="{% url 'news_index' dn %}">{{ department }}</a></li>
                 <li class=""><a href="{% url 'forum_index' dn %}">论坛</a></li>
@@ -23,7 +23,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                     <li class="">
-                        <a style="" href="{% url 'user_profile' user.id %}">{{ user.username }} <span
+                        <a style="color: #245269" href="{% url 'user_profile' user.id %}">{{ user.username }} <span
                                 class="badge"></span></a>
                     </li>
                     <li class="">
