--- a/templates/pitch.html
+++ b/templates/pitch.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="pitch" style="margin-top: -20px">
     <div class="jumbotron" >
-        <h1>We run cool events</h1>
+        <h1 style="font-size: 50px">We run cool events</h1>
   		<p class="lead">大连工业大学CSDN高校俱乐部</p>
     </div>
 </div>
