--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -2,9 +2,9 @@
 {% load humanize %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div style="background-image: url('/static/images/pixels.png');background-repeat: repeat;background-attachment: fixed;background-color: #CCCCFF">
-        <div class="container" style="margin-top: -20px;margin-bottom: -300px">
-            <div class="row" style="margin-top: 20px;margin-bottom: 300px">
+    <div style="background-image: url('/static/images/pixels.png');background-repeat: repeat;background-attachment: fixed;background-color: #CCCCFF;min-height: 900px">
+        <div class="container" style="margin-top: -20px;margin-bottom: -40px">
+            <div class="row" style="margin-top: 20px;margin-bottom: 40px">
                 <div class="col-md-8">
                     <div class="list-group">
                         <div class="list-group-item">
