--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 <div class="panel-heading" style="background-color: #C6E5E9">
                     前往&nbsp;-->&nbsp;社区
                 </div>
-                <div class="list-group">
+                <div class="list-group nav">
                     <div class="list-group-item">
                         <span class="label btn-blue" style="padding: 8px;"></span>
 
@@ -137,4 +137,5 @@
         </div>
     </div>
 </footer>
+
 {% endblock %}
