--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{% url 'index' %}" class="navbar-brand">DlpuCsdn</a>
+            <a href="{% url 'index' %}" style="font-size: 20;color: #5bc0de" class="navbar-brand" ><span>Dlpu</span><span style="color: #D73C31">C</span>sdn</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse nav-color" id="top" role="navigation" style="font: bold">
             <ul class="nav navbar-nav">
