--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,18 @@
     <meta name="description" content="dlpucsdn">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="http://dlpu-static.qiniudn.com/bootstrap.css"/>
-    <link rel="stylesheet" type="text/css" href="http://dlpu-static.qiniudn.com/simditor.css"/>
-    <link rel="stylesheet" type="text/css" href="http://dlpu-static.qiniudn.com/simditor-emoji.css"/>
-    <script type="text/javascript" src="http://dlpu-static.qiniudn.com/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="http://dlpu-static.qiniudn.com/uploader.js"></script>
-    <script type="text/javascript" src="http://dlpu-static.qiniudn.com/module.js"></script>
-    <script type="text/javascript" src="http://dlpu-static.qiniudn.com/simditor.js"></script>
-    <script type="text/javascript" src="http://dlpu-static.qiniudn.com/bootstrap.js"></script>
-    <script type="text/javascript" src="http://dlpu-static.qiniudn.com/simditor-emoji.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/simditor.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/simditor-emoji.css"/>
+    <script type="text/javascript" src="/static/js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="/static/js/uploader.js"></script>
+    <script type="text/javascript" src="/static/js/module.js"></script>
+    <script type="text/javascript" src="/static/js/simditor.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/static/js/simditor-emoji.js"></script>
+    <script type="text/javascript" src="/static/js/unslider.js"></script>
     <style>
         [touch-action="none"] {
             -ms-touch-action: none;
@@ -52,6 +54,8 @@
 {% block blog %}{% endblock %}
 {% block assignment %}{% endblock %}
 {% block research %}{% endblock %}
+
+
 
 
 <script>
