--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -32,7 +32,22 @@
     </div>
     <script>
         var editor = new Simditor({
-            textarea: $('#editor')
+            textarea: $('#editor'),
+            toolbar: ['title', 'bold', 'italic', 'underline', 'color', '|', 'ol', 'blockquote', 'code', '|', 'link', 'image', 'emoji'],
+            emoji: {
+                imagePath: '/static/images/emoji/'
+            },
+            defaultImage: '/static/images/loading-upload.gif'
+
         });
+        editor.focus();
+        $('.reply-btn').click(
+                function () {
+                    var user = $(this).data('user');
+                    var profile = $(this).data('url');
+                    console.log(user);
+                    editor.setValue('<a href="' + profile + '">' + '@' + user + '<' + '/a>' + '&nbsp');
+                }
+        );
     </script>
 {% endblock %}
