--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -3,7 +3,7 @@
 {% load pagination_tags %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div style="background-image: url('/static/images/pixels.png');background-repeat: repeat;background-attachment: fixed;background-color: #99CCCC;min-height: 900px">
+    <div style="min-height: 800px">
     <div class="container" style="margin-top: -20px;margin-bottom: -40px">
         <div class="row" style="margin-top: 20px;margin-bottom: 40px">
             <div class="col-md-8">
