--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,13 @@
+<html>
+<head>
+    <meta http-equiv="refresh" content="5; url=http://dlpucsdn.com">
+    <title>404</title>
+</head>
+<body>
 <div style="text-align: center">
     <h1>404</h1>
-    <p><a href="{% url 'index' %}">回到首页</a></p>
+
+    <p><a href="{% url 'index' %}">正在跳转回首页...</a></p>
 </div>
+</body>
+</html>
