--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta name="description" content="dlpucsdn">
+    <meta name="description" content="大连工业大学CSDN高校俱乐部">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css"/>
